mongo db test connection passed

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,19 @@
-TAVILY_API_KEY=...
-OLLAMA_SERVER=...
+# General App Settings
+ENV_NAME=local
+API_TITLE="MyApp"
+API_VERSION="0.1.0"
+
+# API Keys and External Services
+TAVILY_API_KEY=your_tavily_api_key_here
+OLLAMA_HOST=http://host.docker.internal:11434
+
+# MongoDB Configuration
+MONGO_URI=mongodb://your_mongo_user:your_mongo_password@your_mongo_host:your_mongo_port
+MONGO_DB_NAME=your_database_name
+
+# Milvus Configuration
+MILVUS_HOST=your_milvus_host
+MILVUS_PORT=19530  # Default Milvus port
+
+# Example of additional environment variables (if needed)
+# ADDITIONAL_VAR=your_value_here
