--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "pydantic>=2.7.4,<3.0.0",
     "pymilvus>=2.5.4",
     "pymongo>=4.11.0",
-    "pytest>=8.3.4"
+    "pytest>=8.3.4",
+    "python-json-logger>=3.2.1"
 ]
 
 [project.optional-dependencies]
