--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,10 @@ dependencies = [
     "uvicorn>=0.23.0",
     "pydantic>=2.7.4,<3.0.0",
     "pymilvus>=2.5.4",
-    "pymongo>=4.11.0",
+    "pymongo>=4.9.0,<4.10.0",
     "pytest>=8.3.4",
-    "python-json-logger>=3.2.1"
+    "python-json-logger>=3.2.1",
+    "langgraph-checkpoint-mongodb==0.1.0"
 ]
 
 [project.optional-dependencies]
