--- a/.env.example
+++ b/.env.example
@@ -4,16 +4,16 @@ API_TITLE="MyApp"
 API_VERSION="0.1.0"
 
 # API Keys and External Services
-TAVILY_API_KEY=your_tavily_api_key_here
-OLLAMA_HOST=http://host.docker.internal:11434
-
+TAVILY_API_KEY=...
+OLLAMA_HOST=...
+OPENAI_API_KEY=...
 # MongoDB Configuration
-MONGO_URI=mongodb://your_mongo_user:your_mongo_password@your_mongo_host:your_mongo_port
-MONGO_DB_NAME=your_database_name
+MONGO_URI=...
+MONGO_DB_NAME=..
 
 # Milvus Configuration
-MILVUS_HOST=your_milvus_host
-MILVUS_PORT=19530  # Default Milvus port
+MILVUS_HOST=...
+MILVUS_PORT=... # Default Milvus port
 
 # Example of additional environment variables (if needed)
 # ADDITIONAL_VAR=your_value_here
